fix alignment

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     border: 1px solid var(--shades-200, #CCC);
     background: var(--shades-white, #FFF);
 
+
 }
 
 .content::before,
@@ -51,9 +52,8 @@ body {
 
 .textbox {
     display: flex;
-    padding: 8px;
     align-items: flex-start;
-    gap: 8px;
+    padding: 8px;
 }
 
 p {
@@ -69,7 +69,7 @@ p {
 }
 
 .spacing {
-    width: 16px;
+    flex: 0 0 16px;
     height: 16px;
 }
 
